// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`python full integration test synth synth generates JSON for both stacks 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"python-simple-one\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"version\\": \\"~> 3.1.0\\",
        \\"source\\": \\"hashicorp/null\\"
      }
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"nullresource\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"python-simple-one/null-resource\\",
            \\"uniqueId\\": \\"nullresource\\"
          }
        }
      }
    }
  }
}"
`;

exports[`python full integration test synth synth generates JSON for both stacks 2`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"python-simple-two\\",
      \\"backend\\": \\"local\\"
    }
  },
  \\"terraform\\": {
    \\"backend\\": {
      \\"local\\": {
        \\"path\\": \\"terraform.tfstate\\"
      }
    },
    \\"required_providers\\": {
      \\"null\\": {
        \\"version\\": \\"~> 3.1.0\\",
        \\"source\\": \\"hashicorp/null\\"
      }
    }
  },
  \\"provider\\": {
    \\"null\\": [
      {}
    ]
  },
  \\"resource\\": {
    \\"null_resource\\": {
      \\"nullresource\\": {
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"python-simple-two/null-resource\\",
            \\"uniqueId\\": \\"nullresource\\"
          }
        }
      }
    }
  }
}"
`;
